--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;500;700;900&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Terralab İzin Uygulaması v2</title>
   </head>
   <body>
     <div id="root"></div>
